k8s/app/memcached-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: memcached:alpine
        ports:
        - containerPort: 11211
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: memcached
  labels:
    app: memcached
spec:
  ports:
  - port: 11211
    targetPort: 11211
  selector:
    app: memcached
