k8s/app/rabbit-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: jenkins
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  serviceName: "rabbitmq"
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-pvc
              mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: ebs-sc

---

apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: rabbitmq
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672         # For AMQP client connections
      targetPort: 5672
    - name: management
      port: 15672        # For RabbitMQ Web UI
      targetPort: 15672
