k8s/app/spring-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  labels:
    app: spring-app
  name: spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: deepaksag/springboot-mongodb:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 20
          failureThreshold: 3
  
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 10
          failureThreshold: 3
      
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: spring-app
spec:
  type: LoadBalancer
  selector:
    app: spring-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  # sessionAffinity: ClientIP
